--- a/OX/res/layout/activity_play.xml
+++ b/OX/res/layout/activity_play.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroundtxt"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,8 +10,113 @@
     tools:context=".PlayActivity" >
 
     <TextView
+        android:id="@+id/resultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <TableLayout
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="@dimen/icon_margin"
+        android:layout_centerHorizontal="true"
+        android:background="#aaa" >
+
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
+            
+            <ImageButton
+		        android:id="@+id/imageButton1"
+		        android:layout_marginRight="5dp"
+		        android:layout_marginBottom="5dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+            <ImageButton
+		        android:id="@+id/imageButton2"
+		        android:layout_marginRight="5dp"
+		        android:layout_marginBottom="5dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+            <ImageButton
+		        android:id="@+id/imageButton3"
+		        android:layout_marginBottom="5dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
+            
+            <ImageButton
+		        android:id="@+id/imageButton4"
+		        android:layout_marginRight="5dp"
+		        android:layout_marginBottom="5dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+            <ImageButton
+		        android:id="@+id/imageButton5"
+		        android:layout_marginRight="5dp"
+		        android:layout_marginBottom="5dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+            <ImageButton
+		        android:id="@+id/imageButton6"
+		        android:layout_marginBottom="5dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
+            
+            <ImageButton
+		        android:id="@+id/imageButton7"
+		        android:layout_marginRight="5dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+            <ImageButton
+		        android:id="@+id/imageButton8"
+		        android:layout_marginRight="5dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+            <ImageButton
+		        android:id="@+id/imageButton9"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:src="@drawable/empty"
+		        android:background="#fff" />
+        </TableRow>
+
+    </TableLayout>
 
 </RelativeLayout>
