--- a/OX/res/xml/settings.xml
+++ b/OX/res/xml/settings.xml
@@ -6,5 +6,10 @@
         android:entryValues="@array/gridSizeValues"
         android:title="@string/pref_grid_size"
         android:defaultValue="3" />
+    
+    <CheckBoxPreference 
+        android:key="prefSound"
+        android:title="@string/pref_sound"
+        android:defaultValue="true"/>
 
 </PreferenceScreen>
